gitops/platform/base/flux-web-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web-ui
  namespace: flux-system
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - flux.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
